radix-transactions/tests/assets/manifest_generator_error_invalid_internal_address_1.diag
error: invalid internal address 'component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh'
   |
 2 |     Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
 3 |     "lock_fee"
 4 |     Decimal("5000")
 5 | ;
 6 | FREEZE_VAULT
 7 |     Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid internal address
 8 |     Tuple(
 9 |         2u32
10 |     )
11 | ;
   |